--- a/style.css
+++ b/style.css
@@ -3,46 +3,64 @@
     font-size: 2vh;
     color: cornsilk;
     text-align: center;
+    justify-content: center;
 }
 
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     color: #333;
-    background-image: url("image.png")
+    background-image: url("image.png");
+    background-repeat: round;
+    margin: 20px 20px 0px 20px
 }
 
-.container {
-    width: 80%;
-    margin: 50px auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
 
 h1, h2 {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.img {
-    width: 
-}
+@media screen and (min-width: 400px) {
 
-button {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+    .gameList {
+        padding: 0;
+        margin: 0 auto; 
+        max-width: 1400px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        gap: 20px
+        
+    }
 
-button:hover {
-    background-color: #45a049;
-}
+    .card {
+        width: 300px;
+        height: 450px;
+        background-color: rgb(57, 32, 6);
+        box-shadow: 10px 5px 5px rgba(255,255,0,0.7);
+        overflow: hidden;
+    }
 
-#users-list {
-    margin-top: 20px;
+    .image {
+        margin: 0 auto;
+        width: 95%;
+        height: 95%;
+        object-fit: contain;
+    }
+
+    button {
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #45a049;
+    }
+
 }
