--- a/style.css
+++ b/style.css
@@ -21,46 +21,73 @@ h1, h2 {
     margin-bottom: 20px;
 }
 
-@media screen and (min-width: 400px) {
 
-    .gameList {
-        padding: 0;
-        margin: 0 auto; 
-        max-width: 1400px;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: center;
-        gap: 20px
-        
-    }
-
-    .card {
-        width: 300px;
-        height: 450px;
-        background-color: rgb(57, 32, 6);
-        box-shadow: 10px 5px 5px rgba(255,255,0,0.7);
-        overflow: hidden;
-    }
-
-    .image {
-        margin: 0 auto;
-        width: 95%;
-        height: 95%;
-        object-fit: contain;
-    }
-
-    button {
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #45a049;
-    }
-
+button {
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    font-weight: bold;
 }
+  
+button:hover {
+    background-color: #0056b3;
+}
+
+#gameList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding-top: 20px;
+  }
+  
+  /* Card Styling */
+  .card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 250px;
+    text-align: center;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+  }
+  
+  .card h1 {
+    font-size: 1.5em;
+    color: #333;
+    margin: 20px 0;
+  }
+  
+  .card p {
+    font-size: 1em;
+    color: #666;
+    padding: 0 10px;
+  }
+  
+  .card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .card button {
+    width: 100%;
+    background-color: #ff4c4c;
+    border: none;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    border-top: 1px solid #ccc;
+  }
+  
+  .card button:hover {
+    background-color: #e60000;
+  }
